--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   font-weight: normal;
-  color: #777777;
+  color: #1a1a1a;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -108,4 +108,340 @@ body {
   height: auto;
   margin-top: -6px;
   right: 20px;
+}
+
+
+
+a[href^="#"] {
+  transition: 0.5s ease-in-out;
+}
+
+a[href^="#"]:hover {
+  text-decoration: underline;
+}
+
+.fade-in {
+  transition: opacity 0.5s ease-out;
+}
+
+.blog_id .working {
+  margin: auto;
+  width: 60%;
+  margin-left: 35%;
+
+  margin-top: auto;
+  position: relative;
+  font-family: "Lucida Console", Courier, monospace;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.blog_id .border_line_black {
+  margin: 10px 0px;
+  background: black;
+  width: 50%;
+  margin-left: 0%;
+  margin-right: 0%;
+  height: 1px;
+  margin-bottom: 50px;
+}
+
+.border_line_black1 {
+  margin: 10px 0px;
+  background: rgb(255, 255, 255);
+  /* width: 50%; */
+  margin-left: 0%;
+  margin-right: 80%;
+  height: 1px;
+  margin-bottom: 50px;
+}
+
+body {
+  background: #121212;
+}
+
+
+.home_banner_area {
+  position: relative;
+  z-index: 1;
+  background-image: linear-gradient(112.1deg, rgb(0, 138, 184) 11.4%, rgb(133, 231, 255) 70.2%);
+  margin-bottom: 200px;
+}
+
+.home_banner_area .box_1620 {
+  min-height: 700px;
+  border-radius: 12px;
+  position: relative;
+  bottom: -200px;
+  background: #222222;
+  padding: 60px;
+  box-shadow: 50px 20px 80px 50px rgba(0, 0, 0, 0.3);
+}
+
+.home_banner_area .banner_inner {
+  position: relative;
+  width: 100%;
+  min-height: 700px;
+  display: flex;
+}
+
+.home_banner_area .banner_inner .banner_content {
+  color: #222222;
+  vertical-align: middle;
+  align-self: center;
+  text-align: left;
+}
+
+.home_banner_area .banner_inner .banner_content .media .d-flex {
+  padding-right: 125px;
+}
+
+.home_banner_area .banner_inner .banner_content .media .media-body {
+  vertical-align: middle;
+  align-self: center;
+}
+
+.blog_banner {
+  min-height: 780px;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  margin-bottom: 0px;
+}
+
+.blog_banner .banner_inner {
+  background: #04091e;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  min-height: 780px;
+  z-index: 1;
+}
+
+.blog_banner .banner_inner .overlay {
+  /* background: url() no-repeat scroll center center; */
+  background-size: cover;
+  background-attachment: fixed;
+  object-fit: cover;
+  opacity: .5;
+  height: 100%;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  z-index: -1;
+}
+
+.blog_banner .banner_inner .blog_b_text {
+  max-width: 700px;
+  margin: auto;
+  color: #fff;
+}
+
+.blog_banner .banner_inner .blog_b_text h2 {
+  font-size: 60px;
+  font-weight: bold;
+  font-family: "Heebo", sans-serif;
+  line-height: 66px;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+.blog_banner .banner_inner .blog_b_text p {
+  font-size: 16px;
+  margin-bottom: 35px;
+}
+
+.blog_banner .banner_inner .blog_b_text .white_bg_btn {
+  line-height: 42px;
+  padding: 0px 45px;
+  border-radius: 5px;
+}
+
+.banner_box {
+  max-width: 1620px;
+  margin: auto;
+}
+
+.banner_area {
+  position: relative;
+  z-index: 1;
+  min-height: 350px;
+  background-image: -moz-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+  background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+  background-image: -ms-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+  margin-bottom: 120px;
+}
+
+.banner_area .box_1620 {
+  background: #212121;
+  min-height: 360px;
+  border-radius: 12px;
+  position: relative;
+  bottom: -120px;
+  box-shadow: 0px px 5px 0px rgba(153, 153, 153, 0.3);
+}
+
+.banner_area .banner_inner {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  min-height: 360px;
+  z-index: 1;
+}
+
+.banner_area .banner_inner .banner_content h2 {
+  color: #eeeeee;
+  font-size: 48px;
+  font-family: "Heebo", sans-serif;
+  margin-bottom: 0px;
+  font-weight: bold;
+}
+
+.banner_area .banner_inner .banner_content .page_link a {
+  font-size: 14px;
+  color: #e6e6e6;
+  font-family: "Roboto", sans-serif;
+  margin-right: 32px;
+  position: relative;
+}
+
+.banner_area .banner_inner .banner_content .page_link a:before {
+  content: "\e87a";
+  font-family: 'Linearicons-Free';
+  position: absolute;
+  right: -25px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.banner_area .banner_inner .banner_content .page_link a:last-child {
+  margin-right: 0px;
+}
+
+.banner_area .banner_inner .banner_content .page_link a:last-child:before {
+  display: none;
+}
+
+.banner_area .banner_inner .banner_content .page_link a:hover {
+  color: #766dff;
+}
+
+
+/* Personal Profile
+============================================================================================ */
+.profile_area .col-lg-7 {
+  vertical-align: middle;
+  align-self: center;
+}
+
+.profile_inner {
+  border-bottom: 1px solid #eeeeee;
+}
+
+.profile_inner .personal_text {
+  padding-left: 95px;
+}
+
+.personal_text h5 {
+  font-size: 14px;
+  font-family: "Outfit";
+  text-transform: capitalize;
+  letter-spacing: 2.1px;
+  margin-bottom: 12px;
+  color: #cccccc;
+}
+
+.personal_text h4 {
+  font-size: 16px;
+  font-weight: bold;
+  font-family: "Montserrat";
+  text-transform: capitalize;
+  margin-bottom: 20px;
+  color: #cccccc;
+}
+
+.personal_text h3 {
+  color: #cccccc;
+  font-size: 48px;
+  font-family: "Licorice";
+  text-transform: capitalize;
+  margin-bottom: 15px;
+}
+
+.personal_text p {
+  color: #b4bac6;
+  font-family: "Outfit";
+  max-width: 540px;
+  margin-bottom: 40px;
+}
+
+.personal_text .basic_info li {
+  margin-bottom: 15px;
+}
+
+.personal_text .basic_info li a {
+  position: relative;
+  padding-left: 30px;
+  font-size: 16px;
+  font-weight: bolder;
+  font-family: "Montserrat";
+  color: #b4bac6;
+}
+
+
+.personal_text .basic_info li a i {
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+  color: #f1f1f1;
+}
+
+.personal_text .basic_info li a i:hover {
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+  color: #86e7ff;
+}
+
+
+
+.personal_text .basic_info li:last-child {
+  margin-bottom: 0px;
+}
+
+.personal_text .personal_social {
+  margin-top: 45px;
+}
+
+.personal_text .personal_social li {
+  display: inline-block;
+  margin-right: 7px;
+}
+
+.personal_text .personal_social li:last-child {
+  margin-right: 0px;
+}
+
+.personal_text .personal_social li a {
+  text-align: center;
+  line-height: 53px;
+  width: 53px;
+  display: inline-block;
+  border-radius: 8px;
+  /* padding-left:30%; */
+  font-size: 45px;
+  background: linear-gradient(to right, #766dff 0%, #86e7ff 70%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.personal_text .personal_social li:hover a {
+  background-image: -moz-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+  background-image: -webkit-linear-gradient(0deg, #c7d3c5 0%, #4b595a 100%);
+  background-image: -ms-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
 }
