--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,3 +445,133 @@ body {
   background-image: -webkit-linear-gradient(0deg, #c7d3c5 0%, #4b595a 100%);
   background-image: -ms-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
 }
+
+
+/* Welcome Area css
+============================================================================================ */
+.welcome_inner .welcome_img {
+  background: #eeeeee;
+  margin-left: 40px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 30px;
+}
+
+
+.welcome_inner .welcome_img img {
+  margin-top: -30px;
+}
+
+.welcome_text h4 {
+  color: #cac4c4;
+  font-family: "Outfit";
+  font-size: 36px;
+  margin-bottom: 18px;
+  text-transform: capitalize;
+  margin-top: 25px;
+}
+
+.welcome_text p {
+  color: #a0a9ad;
+  font-size: 16px;
+  max-width: 495px;
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 40px;
+
+}
+
+.wel_item {
+  text-align: center;
+  border: 1px;
+  min-height: 100%;
+  margin-top: 15px;
+  padding: 20px 20px;
+  border-radius: 5px;
+}
+
+.wel_item:hover {
+  text-align: center;
+  border: 1px solid #86e7ff;
+  padding: 20px 20px;
+  border-radius: 14px;
+  background-color: #222222;
+  box-shadow: 1.5px 1.5px 0px 0px #2c2b2b;
+}
+
+
+
+.wel_item i {
+  padding-bottom: 15px;
+
+  /* padding-left:30%; */
+  font-size: 45px;
+  background: linear-gradient(to right, #766dff 0%, #86e7ff 70%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.tools_expert {
+  padding: 20px 0px 0px 0px;
+}
+
+.tools_expert .skill_main .skill_item {
+  margin-bottom: 18px;
+}
+
+.tools_expert .skill_main .skill_item:last-child {
+  margin-bottom: 0px;
+}
+
+.tools_expert .skill_item i {
+  padding-left: 40px;
+  font-size: 20px;
+  background: linear-gradient(to right, #766dff 0%, #86e7ff 70%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.tools_expert .skill_main .skill_item h4 {
+  text-align: none;
+  font-size: 16px;
+  font-family: "Outfit", sans-serif;
+  font-weight: 500;
+  color: #cad4cb;
+  margin-bottom: 7px;
+}
+
+.tools_expert .skill_main .skill_item .progress_br {
+  border: 1px solid #eeeeee;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.tools_expert .skill_main .skill_item .progress {
+  background-image: -moz-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+  background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+  background-image: -ms-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+  height: 10px;
+  border-radius: 10px;
+}
+
+.progress {
+  display: -ms-flexbox;
+  display: flex;
+  height: 1rem;
+  overflow: hidden;
+  font-size: .75rem;
+  background-color: #e9ecef;
+  border-radius: .25rem;
+}
+
+.progress-bar {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #007bff;
+  transition: width .6s ease;
+}
