--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,20 +3,93 @@ body {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   font-weight: normal;
-  color: #1a1a1a;
+  color: #cecece;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: justify;
+  text-align: center;
 }
 
+/* Area del Header
+============================================================================================ */
 .header_area {
   position: absolute;
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 99;
+  z-index: 10;
   transition: background-color 0.4s, all 0.3s linear;
+}
+
+.header_area .navbar {
+  background: transparent;
+  padding: 0px;
+  border: 0px;
+  border-radius: 0px;
+}
+
+.header_area .navbar .nav .nav-item {
+  margin-right: 45px;
+}
+
+.header_area .navbar .nav .nav-item .nav-link {
+  font: 500 12px/120px "Roboto", sans-serif;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 0px;
+  display: inline-block;
+}
+
+.header_area .navbar .nav .nav-item .nav-link:hover {
+  color: #005f69;
+}
+
+
+
+@media (min-width: 992px) {
+  .header_area .navbar .nav .nav-item.submenu ul {
+    position: absolute;
+    top: 120%;
+    left: 0px;
+    min-width: 200px;
+    text-align: left;
+    opacity: 0;
+    transition: all 300ms ease-in;
+    visibility: hidden;
+    display: block;
+    border: none;
+    padding: 0px;
+    border-radius: 0px;
+  }
+}
+
+
+@media (min-width: 992px) {
+  .header_area .navbar .nav .nav-item.submenu:hover ul {
+    visibility: visible;
+    opacity: 1;
+    top: 100%;
+  }
+}
+
+.header_area .navbar .nav .nav-item.submenu:hover ul .nav-item {
+  margin-top: 0px;
+}
+
+.header_area .navbar .nav .nav-item:last-child {
+  margin-right: 0px;
+}
+
+.header_area .navbar .search {
+  font-size: 12px;
+  line-height: 60px;
+  display: inline-block;
+  color: #222222;
+  margin-left: 80px;
+}
+
+.header_area .navbar .search i {
+  font-weight: 600;
 }
 
 .header_area.navbar_fixed .main_menu {
@@ -45,116 +118,6 @@ body {
   margin-right: 15px;
 }
 
-.top_menu .header_social li a {
-  font-size: 14px;
-  color: #777777;
-  display: inline-block;
-  line-height: 42px;
-  transition: all 300ms linear 0s;
-}
-
-.top_menu .header_social li:last-child {
-  margin-right: 0px;
-}
-
-.top_menu .header_social li:hover a {
-  color: #766dff;
-}
-
-.top_menu .dn_btn {
-  line-height: 42px;
-  display: inline-block;
-  font-size: 12px;
-  margin-right: 30px;
-  font-family: "Roboto", sans-serif;
-  font-weight: normal;
-  color: #777777;
-  transition: all 300ms linear 0s;
-}
-
-.top_menu .dn_btn:hover {
-  color: #766dff;
-}
-
-.top_menu .dn_btn:last-child {
-  margin-right: 0px;
-}
-
-.top_menu .lan_pack {
-  height: 30px;
-  border: 1px solid #eeeeee;
-  border-radius: 3px;
-  line-height: 28px;
-  font-size: 12px;
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  padding-left: 19px;
-  padding-right: 36px;
-  color: #777777;
-  background: #f9f9ff;
-  margin-right: 5px;
-  margin-top: 8px;
-}
-
-.top_menu .lan_pack .current {
-  color: #777777;
-}
-
-.top_menu .lan_pack:after {
-  content: "\f0d7";
-  border: none !important;
-  font: normal normal normal 12px/1 FontAwesome;
-  transform: rotate(0deg);
-  height: auto;
-  margin-top: -6px;
-  right: 20px;
-}
-
-
-
-a[href^="#"] {
-  transition: 0.5s ease-in-out;
-}
-
-a[href^="#"]:hover {
-  text-decoration: underline;
-}
-
-.fade-in {
-  transition: opacity 0.5s ease-out;
-}
-
-.blog_id .working {
-  margin: auto;
-  width: 60%;
-  margin-left: 35%;
-
-  margin-top: auto;
-  position: relative;
-  font-family: "Lucida Console", Courier, monospace;
-  font-size: 40px;
-  font-weight: bold;
-}
-
-.blog_id .border_line_black {
-  margin: 10px 0px;
-  background: black;
-  width: 50%;
-  margin-left: 0%;
-  margin-right: 0%;
-  height: 1px;
-  margin-bottom: 50px;
-}
-
-.border_line_black1 {
-  margin: 10px 0px;
-  background: rgb(255, 255, 255);
-  /* width: 50%; */
-  margin-left: 0%;
-  margin-right: 80%;
-  height: 1px;
-  margin-bottom: 50px;
-}
 
 body {
   background: #121212;
@@ -187,18 +150,22 @@ body {
 
 .home_banner_area .banner_inner .banner_content {
   color: #222222;
-  vertical-align: middle;
   align-self: center;
   text-align: left;
 }
 
 .home_banner_area .banner_inner .banner_content .media .d-flex {
   padding-right: 125px;
+  position: relative;
+}
+
+.d-flex img {
+  mask-image: linear-gradient(black 60%, transparent);
 }
 
 .home_banner_area .banner_inner .banner_content .media .media-body {
-  vertical-align: middle;
-  align-self: center;
+  text-align: center;
+
 }
 
 .blog_banner {
@@ -219,7 +186,6 @@ body {
 }
 
 .blog_banner .banner_inner .overlay {
-  /* background: url() no-repeat scroll center center; */
   background-size: cover;
   background-attachment: fixed;
   object-fit: cover;
@@ -244,7 +210,6 @@ body {
   font-family: "Heebo", sans-serif;
   line-height: 66px;
   margin-bottom: 15px;
-  text-transform: uppercase;
 }
 
 .blog_banner .banner_inner .blog_b_text p {
@@ -328,7 +293,7 @@ body {
 }
 
 
-/* Personal Profile
+/* Area de mi perfil personal
 ============================================================================================ */
 .profile_area .col-lg-7 {
   vertical-align: middle;
@@ -340,13 +305,12 @@ body {
 }
 
 .profile_inner .personal_text {
-  padding-left: 95px;
+  text-align: center;
 }
 
 .personal_text h5 {
   font-size: 14px;
   font-family: "Outfit";
-  text-transform: capitalize;
   letter-spacing: 2.1px;
   margin-bottom: 12px;
   color: #cccccc;
@@ -356,7 +320,6 @@ body {
   font-size: 16px;
   font-weight: bold;
   font-family: "Montserrat";
-  text-transform: capitalize;
   margin-bottom: 20px;
   color: #cccccc;
 }
@@ -365,7 +328,6 @@ body {
   color: #cccccc;
   font-size: 48px;
   font-family: "Licorice";
-  text-transform: capitalize;
   margin-bottom: 15px;
 }
 
@@ -467,7 +429,6 @@ body {
   font-family: "Outfit";
   font-size: 36px;
   margin-bottom: 18px;
-  text-transform: capitalize;
   margin-top: 25px;
 }
 
@@ -502,8 +463,6 @@ body {
 
 .wel_item i {
   padding-bottom: 15px;
-
-  /* padding-left:30%; */
   font-size: 45px;
   background: linear-gradient(to right, #766dff 0%, #86e7ff 70%);
   -webkit-background-clip: text;
@@ -553,35 +512,13 @@ body {
   border-radius: 10px;
 }
 
-.progress {
-  display: -ms-flexbox;
-  display: flex;
-  height: 1rem;
-  overflow: hidden;
-  font-size: .75rem;
-  background-color: #e9ecef;
-  border-radius: .25rem;
-}
 
-.progress-bar {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  justify-content: center;
-  color: #fff;
-  text-align: center;
-  white-space: nowrap;
-  background-color: #007bff;
-  transition: width .6s ease;
-}
-
-/* My Tabs Area css
-============================================================================================ */
+/* Area de mi info
+=========================================================================================== */
 
 
 .mytabs_area {
-
+  margin-top: 2em;
   background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(69, 86, 102, 1) 0%, rgba(34, 34, 34, 1) 90%);
 }
 
@@ -590,6 +527,7 @@ body {
   text-align: center;
   border: none;
   margin-bottom: 120px;
+  margin-top: 2em;
 }
 
 .tabs_inner .nav.nav-tabs li {
@@ -613,8 +551,6 @@ body {
 
 
 .tabs_inner .nav.nav-tabs li a.active {
-  /* background: #fff;
-        color: #222222;  */
   background-image: -moz-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
   background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
   background-image: -ms-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
@@ -685,11 +621,75 @@ body {
 .tabs_inner .tab-content .tab-pane .list li .media .media-body h4 {
   color: #fff;
   font-size: 25px;
-  text-transform: capitalize;
   margin-bottom: 20px;
 }
 
 .tabs_inner .tab-content .tab-pane .list li .media .media-body p {
   color: rgba(255, 255, 255, 0.75);
   margin-bottom: 0px;
+}
+
+/* Area del footer
+============================================================================================ */
+
+.footer_area {
+  background: #000;
+  text-align: center;
+}
+
+.f_title {
+  margin-top: 2em;
+  margin-bottom: 35px;
+}
+
+
+.news_widget .input-group .sub-btn {
+  border-radius: 0px;
+  background-image: -moz-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+  background-image: -webkit-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+  background-image: -ms-linear-gradient(0deg, #766dff 0%, #88f3ff 100%);
+  outline: none !important;
+  box-shadow: none !important;
+  padding: 0px;
+  border: none;
+  width: 42px;
+  cursor: pointer;
+  color: #fff;
+}
+
+.social_widget p {
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "Roboto", sans-serif;
+  color: #777777;
+  margin-bottom: 10px;
+}
+
+.social_widget .list li {
+  margin-right: 17px;
+  display: inline-block;
+}
+
+.social_widget .list li a {
+  color: #cccccc;
+  font-size: 25px;
+  transition: all 300ms linear 0s;
+}
+
+
+.social_widget .list li:last-child {
+  margin-right: 0px;
+}
+
+.social_widget .list li:hover a {
+  color: #766dff;
+}
+
+.copy_right_text {
+  text-align: center;
+  margin-top: 60px;
+}
+
+.copy_right_text p a {
+  color: #766dff;
 }
