--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -58,6 +58,7 @@
 	.header_area .navbar .nav .nav-item.submenu ul {
 		left: auto;
 		right: 0px;
+		height: 100%;
 	}
 
 	/* End Home Banner Area css
@@ -154,6 +155,7 @@
 	.navbar .container {
 		padding-left: 15px;
 		padding-right: 15px;
+		height: 100%;
 	}
 
 	.nav {
@@ -176,6 +178,8 @@
 		display: block;
 		border-bottom: 1px solid #ededed33;
 		border-radius: 0px;
+		width: 100%;
+		background-color: #000;
 	}
 
 	.header_area.navbar_fixed .main_menu .navbar .nav .nav-item .nav-link {
@@ -188,11 +192,12 @@
 
 	.header_area .navbar-collapse {
 		max-height: 340px;
-		overflow-y: scroll;
+
 	}
 
 	.header_area .navbar .nav .nav-item.submenu ul .nav-item .nav-link {
 		padding: 0px 15px;
+		height: 100%;
 	}
 
 	.header_area .navbar .nav .nav-item {
@@ -203,55 +208,6 @@
 	.header_area+row,
 	.header_area+div {
 		margin-top: 0px;
-	}
-
-	/* End Main Menu Area css
-	============================================================================================ */
-	/* Blog page Area css
-	============================================================================================ */
-	.categories_post img {
-		width: 100%;
-	}
-
-	.categories_post {
-		max-width: 360px;
-		margin: 0 auto;
-	}
-
-	.blog_categorie_area .col-lg-4 {
-		margin-top: 30px;
-	}
-
-	.blog_area {
-		padding-bottom: 80px;
-	}
-
-	.single-post-area .blog_right_sidebar {
-		margin-top: 30px;
-	}
-
-	/* End Blog page Area css
-	============================================================================================ */
-
-	/* Contact Page Area css
-	============================================================================================ */
-	.contact_info {
-		margin-bottom: 50px;
-	}
-
-	.c_details_list {
-		margin-top: 30px;
-	}
-
-	/* End Contact page Area css
-	============================================================================================ */
-	.home_banner_area .donation_inner {
-		margin-bottom: -30px;
-	}
-
-	.home_banner_area .dontation_item {
-		max-width: 350px;
-		margin: auto;
 	}
 
 	/* Footer Area css
