--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,8 @@ body {
     border: none;
     padding: 0px;
     border-radius: 0px;
+    height: 100%;
+    margin: 0;
   }
 }
 
@@ -74,6 +76,7 @@ body {
     visibility: visible;
     opacity: 1;
     top: 100%;
+    height: 100%;
   }
 }
 
@@ -399,10 +402,8 @@ body {
   width: 53px;
   display: inline-block;
   border-radius: 8px;
-  /* padding-left:30%; */
   font-size: 45px;
   background: linear-gradient(to right, #766dff 0%, #86e7ff 70%);
-  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -413,7 +414,7 @@ body {
 }
 
 
-/* Welcome Area css
+/* Area presentacion
 ============================================================================================ */
 .welcome_inner .welcome_img {
   background: #eeeeee;
@@ -466,7 +467,6 @@ body {
   padding-bottom: 15px;
   font-size: 45px;
   background: linear-gradient(to right, #766dff 0%, #86e7ff 70%);
-  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -486,7 +486,6 @@ body {
   padding-left: 40px;
   font-size: 20px;
   background: linear-gradient(to right, #766dff 0%, #86e7ff 70%);
-  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
