--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,8 +65,6 @@ body {
     border: none;
     padding: 0px;
     border-radius: 0px;
-    height: 100%;
-    margin: 0;
   }
 }
 
@@ -76,7 +74,6 @@ body {
     visibility: visible;
     opacity: 1;
     top: 100%;
-    height: 100%;
   }
 }
 
@@ -402,8 +399,10 @@ body {
   width: 53px;
   display: inline-block;
   border-radius: 8px;
+  /* padding-left:30%; */
   font-size: 45px;
   background: linear-gradient(to right, #766dff 0%, #86e7ff 70%);
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -414,7 +413,7 @@ body {
 }
 
 
-/* Area presentacion
+/* Area de presentacion
 ============================================================================================ */
 .welcome_inner .welcome_img {
   background: #eeeeee;
@@ -467,6 +466,7 @@ body {
   padding-bottom: 15px;
   font-size: 45px;
   background: linear-gradient(to right, #766dff 0%, #86e7ff 70%);
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -486,6 +486,7 @@ body {
   padding-left: 40px;
   font-size: 20px;
   background: linear-gradient(to right, #766dff 0%, #86e7ff 70%);
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
